--- a/client/src/components/Pagination/Pagination.css
+++ b/client/src/components/Pagination/Pagination.css
@@ -2,13 +2,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #c7291e;
+    background-color: #683217;
     width: 250px;
     height: 50px;
     margin-top: 30px;
     border-radius: 50px;
     margin-inline: auto;
     margin-top: 20px;
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.27);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.8px);
+    -webkit-backdrop-filter: blur(8.8px);
 }
 
 .container-cards {
@@ -22,10 +28,16 @@
 .individual {
     /* margin-left: 20px; */
     margin-inline: auto;
-    color: white;
+    /* color: white; */
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.62);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(8.8px);
+    -webkit-backdrop-filter: blur(8.8px);
 }
 .botonPrevNext {
-    background-color: #ffffff;
+    background-color: #eee2e2;
     border-color: rgb(0, 0, 0);
     color: rgb(0, 0, 0);
     display: block;
