--- a/client/src/components/Landing/Landing.css
+++ b/client/src/components/Landing/Landing.css
@@ -1,8 +1,9 @@
 .coco {
     background-image: url(../../Imagenes/1.jpeg);
+    backdrop-filter: blur(4px);
 
     height: 98.5vh;
-    /* margin-top: px; */
+
     background-attachment: fixed;
 
     background-size: cover;
@@ -14,6 +15,7 @@
 }
 body {
     background-image: url(../../Imagenes/1.jpeg);
+
     backdrop-filter: blur(4px);
     background-attachment: fixed;
     background-size: cover;
