--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -1,30 +1,34 @@
+a {
+    color: black;
+    text-decoration: none;
+}
+
 .navbar-container {
     color: rgb(0, 0, 0);
 
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #683217;
-    box-shadow: 0 0 10px 5px rgb(46, 45, 45);
+
     margin-inline: auto;
     height: 55px;
-    /* From https://css.glass */
-    background: rgba(255, 255, 255, 0.27);
 
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.322);
+
+    box-shadow: 0 4px 10px rgba(250, 250, 250, 0.116);
     backdrop-filter: blur(8.8px);
     -webkit-backdrop-filter: blur(8.8px);
 }
 .logo-nav {
-    height: 40px;
+    height: 60px;
     cursor: pointer;
     transition: 0.5s;
 }
 
 .boton-createActividad {
-    background-color: #000000;
+    background-color: #ffffff;
     border: 1px solid #ffffff;
-    color: white;
+    color: rgb(24, 23, 23);
     padding: 15px 32px;
     text-decoration: none;
     display: inline-block;
@@ -34,13 +38,13 @@
     border-radius: 5px;
     display: flex;
     align-items: center;
-    height: 43px;
-    width: 200px;
+    height: 40px;
+    width: 169px;
 }
 .boton-createActividad:hover {
     display: flex;
     align-items: center;
-    background-color: #ffffff;
-    color: #000000;
-    border: 1px solid #000000;
+    background-color: #000000;
+    color: #ffffff;
+    border: 1px solid #fcfcfc;
 }
