--- a/client/src/components/CountrieDetail/CountrieDetail.css
+++ b/client/src/components/CountrieDetail/CountrieDetail.css
@@ -1,26 +1,95 @@
 .container-card-detail {
-    margin-top: 150px;
-    margin-left: 160px;
+    margin-top: 60px;
+    margin-left: 500px;
     gap: 30px;
     display: inline-flex;
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
 
-    border: 1px solid rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(216, 135, 88);
+    background-color: rgba(0, 0, 0, 0.445);
     border-radius: 3px;
-    width: 1100px;
-    height: 500px;
+    width: 850px;
+    height: 600px;
 
     box-shadow: 22px 29px 34px -10px rgba(0, 0, 0, 0.75);
 }
 
 .container-detail {
-    display: flex;
-    align-items: flex-start;
+    color: wheat;
+
+    /* margin-right: -10px; */
+    /* display: flex; */
+    /* align-items: flex-start;
     flex-direction: column;
-    text-align: left;
+    text-align: left; */
+    margin-top: 40px;
+    margin-right: 90px;
+    color: wheat;
+    /* border: 1px solid black;
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.486); */
+    width: 230px;
+    height: 500px;
+    font-size: 14px;
+}
+.datos-pais {
+    display: flex;
+    color: wheat;
+    margin-left: 130px;
 }
 
-/* .imagen-detail {
-} */
+.imagen-detail {
+    max-height: 500px;
+    max-width: 400px;
+    margin-left: 20px;
+}
+.name-detail {
+    color: wheat;
+    font-size: 30px;
+    margin-left: 150px;
+}
+.activities-container {
+    color: white;
+
+    border: 1px solid black;
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.363);
+}
+.button {
+    background-color: wheat;
+    border: 2px solid rgb(230, 156, 72);
+    color: rgb(230, 156, 72);
+    height: 40px;
+    border-radius: 10px;
+    cursor: pointer;
+    width: 90px;
+    margin-top: 530px;
+    margin-left: -110px;
+    transition: 0.5s;
+}
+.button:hover {
+    color: black;
+    background-color: rgb(255, 255, 255);
+    border: 2px solid black;
+}
+.name-add-activity {
+    margin-top: 12px;
+    margin-left: 5px;
+}
+.button-back {
+    color: rgb(0, 0, 0);
+    background-color: wheat;
+    border-color: rgb(231, 151, 59);
+    margin-top: 70px;
+    margin-left: 900px;
+    height: 35px;
+    width: 80px;
+    font-weight: 750;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.button-back:hover {
+    color: black;
+    background-color: white;
+}
