--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -13,19 +13,23 @@ a {
     margin-inline: auto;
     height: 55px;
 
-    background: rgba(0, 0, 0, 0.322);
+    background: rgba(0, 0, 0, 0.699);
 
     box-shadow: 0 4px 10px rgba(250, 250, 250, 0.116);
     backdrop-filter: blur(8.8px);
     -webkit-backdrop-filter: blur(8.8px);
 }
 .logo-nav {
-    height: 60px;
-    cursor: pointer;
-    transition: 0.5s;
+    margin-left: -350px;
+    margin-top: 20px;
+    height: 100px;
 }
-
+.logo-nav2 {
+    margin-top: 20px;
+    height: 100px;
+}
 .boton-createActividad {
+    margin-left: 1000px;
     background-color: #ffffff;
     border: 1px solid #ffffff;
     color: rgb(24, 23, 23);
@@ -33,13 +37,14 @@ a {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    font-weight: 700;
     cursor: pointer;
     transition: 0.5s;
     border-radius: 5px;
     display: flex;
     align-items: center;
     height: 40px;
-    width: 169px;
+    width: 179px;
 }
 .boton-createActividad:hover {
     display: flex;
