--- a/client/src/components/CountrieDetail/CountrieDetail.css
+++ b/client/src/components/CountrieDetail/CountrieDetail.css
@@ -51,8 +51,10 @@
 }
 .activities-container {
     color: white;
+    font-size: 15px;
+    font-weight: 5;
 
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 4px;
     background-color: rgba(0, 0, 0, 0.363);
 }
@@ -88,6 +90,7 @@
     font-weight: 750;
     cursor: pointer;
     transition: 0.5s;
+    border-radius: 8px;
 }
 .button-back:hover {
     color: rgb(255, 251, 251);
