--- a/client/src/components/CreateActivity/CreateActivity.css
+++ b/client/src/components/CreateActivity/CreateActivity.css
@@ -1,6 +1,6 @@
 .content-select {
     display: inline-block;
-    width: 10%;
+    width: 30%;
     cursor: pointer;
     padding: 7px 10px;
     height: 35px;
@@ -25,7 +25,7 @@
 
 .content-select-difficulty {
     display: inline-block;
-    width: 4.5%;
+    width: 30%;
     cursor: pointer;
     padding: 7px 10px;
     height: 35px;
@@ -48,7 +48,7 @@
 }
 .content-select-duration {
     display: inline-block;
-    width: 4.5%;
+    width: 30%;
     cursor: pointer;
     padding: 7px 10px;
     height: 35px;
@@ -72,7 +72,7 @@
 
 .content-select-season {
     display: inline-block;
-    width: 6.5%;
+    width: 30%;
     cursor: pointer;
     padding: 7px 10px;
     height: 35px;
@@ -95,4 +95,82 @@
 }
 .errores {
     color: red;
+}
+.container-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 739px;
+    margin-top: 20px;
+    border: 1px solid rgba(87, 143, 180, 0.363);
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.466);
+    color: white;
+    border-radius: 24px;
+    align-items: center;
+    line-height: 55px;
+    min-height: 600px;
+    max-height: 750px;
+}
+.button-back1 {
+    /* margin-left: 10px; */
+    color: rgb(87, 143, 180);
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(87, 143, 180);
+    margin-top: 100px;
+    height: 35px;
+    width: 80px;
+    font-weight: 750;
+    cursor: pointer;
+    transition: 0.5s;
+    border-radius: 8px;
+}
+.button-back2 {
+    margin-left: 900px;
+    color: rgb(87, 143, 180);
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(87, 143, 180);
+
+    height: 35px;
+    width: 80px;
+    font-weight: 750;
+    cursor: pointer;
+    transition: 0.5s;
+    border-radius: 8px;
+}
+.button-back1:hover {
+    color: rgb(255, 251, 251);
+    background-color: rgb(87, 143, 180);
+}
+.button-back2:hover {
+    color: rgb(255, 251, 251);
+    background-color: rgb(87, 143, 180);
+}
+.x-delete {
+    font-weight: 800;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.863);
+    margin-top: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-left: 20px;
+    /* border: 1px solid black; */
+    height: 15px;
+    width: 15px;
+    border-radius: 10%;
+}
+
+.container-countries-select {
+    /* margin-top: 20px; */
+    display: flex;
+    line-height: 0.1px;
+}
+.div-paises-select {
+    overflow-y: scroll;
+    background-color: rgba(0, 0, 0, 0.411);
+    /* border-radius: 4px; */
+    margin-top: 20px;
+    width: 320px;
 }
