--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -27,6 +27,7 @@ a {
 .logo-nav2 {
     margin-top: 20px;
     height: 100px;
+    margin-left: 9px;
 }
 .boton-createActividad {
     margin-left: 1000px;
