--- a/client/src/components/CountrieDetail/CountrieDetail.css
+++ b/client/src/components/CountrieDetail/CountrieDetail.css
@@ -55,8 +55,19 @@
     font-weight: 5;
 
     /* border: 1px solid black; */
-    border-radius: 4px;
+    border-radius: 2px;
     background-color: rgba(0, 0, 0, 0.363);
+    width: 200px;
+    margin-left: 10px;
+}
+.contenedor-general {
+    overflow-y: scroll;
+    max-height: 500px;
+    margin-top: -10px;
+    /* border: 1px solid rgb(0, 0, 0); */
+    border-radius: 1px;
+    background-color: rgba(0, 0, 0, 0.185);
+    width: 250px;
 }
 .button {
     background-color: rgb(253, 254, 255);
